# commentary

./: .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  .prettierrc.js  .tool-versions  README.md  acknowledments.html  biome.jsonc  book.js  book.toml  debug.sh  fin.html  hl-sharedworker.js  hl-worker.js  index.html  override.css  pagelist.html  partytown-head.js  replace-dom.js  searcher.js  searchindex.js  searchindex.json  searchindex.json.br  serviceworker.js  sitemap.xml  slider.js  test823487.html  test98238967.html  wasm_book_bg.wasm
.github/: dependabot.yml  renovate.json5
.github/workflows/: build-mdbook.yml  build-script.yml  build-scss.yml  build.yml  deploy.yml  gh-pages.yml  test-js.yml  test-mdbook-backend.yml  test-rs-footnote.yml  test-rs.yml
book/: 404.html  chapter_1.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
book/theme/: override.css
book/wezterm/: base.html  custom.html  dpi-detection.html  font.html  format.html  frame.html  installation.html  keybind.html  leader.html  left-status.html  right-status.html  shell.html  status.html  tab.html  toggle-font.html  window-title.html  window.html
css/: chapter.css  chrome.css  general.css  header.css  headline.css  mdbook-admonish.css  pagetoc.css  search.css  style.css  theme-list.css
css/catppuccin/: au-lait.css  frappe.css  latte.css  macchiato.css  mocha.css
css/theme/: au-lait.css  frappe.css  latte.css  macchiato.css  mocha.css
fonts/: README.md  convert.py  fonts.css  pyproject.toml
fonts/NerdFontsSymbolsOnly/: README.md
js/: _start.js  biome.json  biome.jsonc  book.js  book.test.ts  book.ts  build.js  bun.lockb  bunfig.toml  codeblock.js  codeblock.ts  constants.ts  context.ts  create-highlight.bun.sh  create-highlight.sh  css-loader.js  css-loader.ts  css-variables.js  deno.jsonc  fetch.ts  finder.js  finder.ts  footnote.ts  generators.ts  highlight.js  highlight.min.js  hl-initialize.ts  hl-sharedworker.ts  hl-types.ts  hl-worker.js  hl-worker.ts  import_map.json  initialize.ts  link.test.ts  link.ts  mark.ts  media.ts  navigate.ts  navigation-store.ts  navigation.ts  (+30 more)
js/assets/: elasticlunr.js  fzf.umd.js
js/extensions/: codeblock.ts  footnote-legacy.ts  (+6 more)
neovim/: installation.html  keybind.html  leader.html  lua-module.html  user-config.html
outro/: lazy-migration-guide.html  lazy.html  linter.html  lsp-meet-me.html  mason-null-ls.html  none-ls.html  nvim-notify.html  nvim_get_option_value.html  nvim_set_option_value.html  nvim_set_var.html  outroduction.html  wezterm-meet-me.html  year2024.html
pagetoc/: sidebar.js  style.css
rs/: .rustfmt.toml  rustfmt.toml
rs/mdbook-footnote/: Cargo.toml  README.md
rs/mdbook-footnote/src/: lib.rs  main.rs
rs/mdbook-footnote/test/: ok.md  test.md
rs/wasm/: Cargo.toml  webdriver.json
rs/wasm/.cargo/: config.toml
rs/wasm/macros/: Cargo.toml
rs/wasm/macros/src/: lib.rs
rs/wasm/src/: book.rs  lib.rs  make_teaser.rs  searcher.rs
rs/wasm/src/link/: mod.rs
rs/wasm/src/mark/: article.rs  marking.rs  mod.rs  unmarking.rs
rs/wasm/src/searcher/: algo.rs  constants.rs  doc.rs  excerpt.rs  finder.rs  function.rs  highlight.rs  hit_list.rs  html_builder.rs  js_util.rs  mod.rs  score.rs  search_result.rs  teaser.rs
rs/wasm/src/searcher/algo/: char_class.rs  mod.rs  score.rs
scripts/: beautify.ts  content.ts  deno.jsonc  extract-json.js  generate-pagelist.js  generate-pagelist.sh  global.ts  import_map.json  json.ts  link.ts  package-lock.json  package.json  pagelist.ts
scss/: _additional-admonish.scss  _additional-color.scss  _catppuccin-admonish.scss  _catppuccin-au-lait.scss  _catppuccin-highlight.scss  _catppuccin.scss  _chrome.scss  _fonts.scss  _footnote.scss  _headline.scss  _icons.scss  _mdbook-admonish.scss  _mixins.scss  _pagetoc.scss  _presentation.scss  _search.scss  _slider.scss  _table-of-contents.scss  _theme-list.scss  _toast.scss  _variables.scss  build.js  build.ts  bun.lockb  chapter.scss  color-channnels.scss  deno.jsonc  download-plyr-css.sh  footnote-legacy.scss  footnote.scss  general.scss  global.scss  import_map.json  package-lock.json  package.json  scss.test.ts  search.scss  style.scss  theme-list.scss  variables.scss
sidebar/: style.css
src/: 404.html  404.md  SUMMARY.md  __test__.html  acknowledments.md  fin.md  fonts.css  goal.avif  highlight.min.js  index.md  introduction.html  introduction.md  manifest.json  sitemap.txt  sitemap.xml
test/: test8239y9.html
test2/: testas0vhe.html
theme/: book.js  head.hbs  header.hbs  index.hbs  index.test.ts  toc.html.hbs
tmp/: README.txt
wezterm/: configuration.html  custom.html  dpi-detection.html  font.html  format.html  frame.html  installation.html  keybind.html  leader.html  left-status.html  right-status.html  shell.html  status.html  tab.html  toggle-font.html  window-decorations.html  window-title.html  window.html
(+742 files in other folders)
