[project]
name = "font-generate"
version = "0.1.0"
description = "Font conversion utilities"
authors = [
  { name = "CoralPink", email = "teqt6ytqt@mozmail.com>" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
  "brotli ==1.1.0",
  "fonttools ==4.55.6",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
