[package]
name = "mdbook-footnote"
version = "2.0.0"
authors = ["David Drysdale <dmd@lurklurk.org>", "CoralPink"]
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"

[dependencies]
clap = "=4.5.53"
mdbook-preprocessor = "=0.5.1"
regex = "=1.12.2"
semver = "=1.0.27"
serde_json = "=1.0.145"

[dev-dependencies]
pretty_assertions = "=1.4.1"

[profile.release]
lto = "thin"
opt-level = 3
strip = "symbols"
