[package]
name = "mdbook-footnote"
version = "2.1.1"
authors = ["David Drysdale <dmd@lurklurk.org>", "CoralPink"]
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"

[dependencies]
bumpalo = { version = "=3.20.3", features = ["collections"] }
clap = "=4.6.2"
itoa = "=1.0.18"
mdbook-preprocessor = "=0.5.4"
regex = "=1.13.1"
semver = "=1.0.28"
serde_json = "=1.0.151"

[dev-dependencies]
pretty_assertions = "=1.4.1"

[profile.release]
lto = "thin"
opt-level = 3
strip = "symbols"
