[package]
name = "wasm-book"
version = "1.1.1"
authors = ["CoralPink <teqt6ytqt@mozmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "This is the WebAssembly code used on this site."
homepage = "https://github.com/CoralPink"
repository = "https://github.com/CoralPink/commentary"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["macros"]

[profile.release]
lto = "fat"
opt-level = "s"
strip = "symbols"

[dependencies]
arrayvec = "=0.7.6"
getset = "=0.1.6"
html-escape = "=0.2.13"
js-sys = "=0.3.78"
macros = { path = "macros" }
serde = { version = "=1.0.221", features = ["derive"] }
serde-wasm-bindgen = "=0.6.5"
urlencoding = "=2.1.3"
wasm-bindgen = "=0.2.101"

[dev-dependencies]
wasm-bindgen-test = "=0.3.51"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
