[package]
name = "wasm-book"
version = "1.4.0"
authors = ["CoralPink <teqt6ytqt@mozmail.com>"]
edition = "2024"
rust-version = "1.88"
description = "This is the WebAssembly code used on this site."
homepage = "https://github.com/CoralPink"
repository = "https://github.com/CoralPink/commentary"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["macros"]

[profile.release]
lto = "fat"
opt-level = "z"
strip = "symbols"
codegen-units = 1
panic = "abort"

[dependencies]
getset = "=0.1.6"
itoa = "=1.0.18"
js-sys = "=0.3.93"
macros = { path = "macros" }
memchr = { version = "=2.8.0", default-features = false }
serde = { version = "=1.0.228", features = ["derive"] }
serde-wasm-bindgen = "=0.6.5"
unicode-segmentation = "=1.13.2"
urlencoding = "=2.1.3"
wasm-bindgen = "=0.2.116"

[dev-dependencies]
wasm-bindgen-test = "=0.3.66"

[features]
debug = ["macros/use-browser-console"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
