[package]
name = "wasm-book"
version = "1.5.2"
authors = ["CoralPink <teqt6ytqt@mozmail.com>"]
edition = "2024"
rust-version = "1.88"
description = "This is the WebAssembly code used on this site."
homepage = "https://github.com/CoralPink"
repository = "https://github.com/CoralPink/commentary"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["macros"]

[profile.release]
lto = "fat"
opt-level = "z"
strip = "symbols"
codegen-units = 1
panic = "abort"

[dependencies]
bumpalo = { version = "=3.20.3", features = ["collections"] }
getset = "=0.1.7"
itoa = "=1.0.18"
js-sys = "=0.3.100"
macros = { path = "macros" }
memchr = { version = "=2.8.1", default-features = false }
percent-encoding = "=2.3.2"
serde = { version = "=1.0.228", features = ["derive"] }
serde-wasm-bindgen = "=0.6.5"
unicode-segmentation = "=1.13.3"
wasm-bindgen = "=0.2.123"

[dev-dependencies]
wasm-bindgen-test = "=0.3.73"

[features]
debug = ["macros/use-browser-console"]
